<resources>
    <string name="app_name">Social Network</string>
    <string name="text_logo">HUST</string>
    <string name="authentication_login">Đăng nhập</string>
    <string name="authentication_register">Đăng ký</string>
    <string name="authentication_email_hint">Email</string>
    <string name="authentication_password_hint">Mật khẩu</string>
    <string name="authentication_confirm_password_hint">Xác nhận mật khẩu</string>
    <string name="authentication_name_label">Tên hiển thị (*)</string>
    <string name="authentication_name_hint">Tên hiển thị</string>
    <string name="authentication_birthday_label">Ngày sinh (*)</string>
    <string name="authentication_birthday_hint">dd/MM/yyyy</string>
    <string name="authentication_gender_label">Giới tính (*)</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="other">Khác</string>
    <string name="authentication_forgot_password">Quên mật khẩu?</string>
    <string name="authentication_new_account">Chưa có tài khoản?</string>
    <string name="authentication_already_account">Đã có tài khoản?</string>
    <string name="authentication_term_service_label">Bằng việc nhấn vào Đăng ký, bạn đồng ý với</string>
    <string name="authentication_term_service">Chính sách bảo mật và Điều khoản sử dụng</string>
    <string name="title_information">Cá nhân</string>
    <string name="title_description">Giới thiệu</string>
    <string name="title_address">Nơi sống</string>
    <string name="title_job">Công việc</string>
    <string name="title_education">Trường học</string>
    <string name="title_name">Tên hiển thị:</string>
    <string name="title_phone">Số điện thoại:</string>
    <string name="title_birthday">Sinh ngày:</string>
    <string name="title_gender">Giới tính:</string>
    <string name="title_join_in">Tham gia vào</string>
    <string name="title_current_residence">Sống tại:</string>
    <string name="title_current_residence_hint">Thêm nơi sống hiện tại</string>
    <string name="title_hometown">Đến từ:</string>
    <string name="title_hometown_hint">Thêm quê quán</string>
    <string name="title_job_hint">Thêm công việc của bạn</string>
    <string name="title_education_hint">Thêm trường học của bạn</string>
    <string name="title_edit">Sửa</string>
    <string name="toolbar_title_crop_image">Xem trước</string>
    <string name="toolbar_text_right_edit_confirm">Xong</string>
    <string name="toolbar_text_right_post_confirm">Đăng</string>
    <string name="toolbar_title_edit_main">Chỉnh sửa thông tin</string>
    <string name="toolbar_title_edit_name">Tên hiển thị</string>
    <string name="toolbar_title_edit_phone">Số điện thoại</string>
    <string name="toolbar_title_edit_birthday">Ngày sinh</string>
    <string name="toolbar_title_edit_gender">Giới tính</string>
    <string name="toolbar_title_edit_relationship">Tình trạng quan hệ</string>
    <string name="toolbar_title_edit_description">Giới thiệu</string>
    <string name="toolbar_title_edit_website">Website</string>
    <string name="toolbar_title_edit_address">Tỉnh/Thành phố</string>
    <string name="toolbar_title_edit_job">Công việc</string>
    <string name="toolbar_title_edit_education">Trường học</string>
    <string name="toolbar_title_photo_album">Album ảnh</string>
    <string name="toolbar_title_video_album">Video</string>
    <string name="toolbar_title_post_detail">Bài viết</string>
    <string name="toolbar_title_post_create">Tạo bài viết</string>
    <string name="toolbar_title_friend_list">Bạn bè của</string>
    <string name="edit_profile_name_label">Tên hiển thị</string>
    <string name="edit_profile_name_waring">Lưu ý: Đảm bảo không có ký tự bất thường nào!</string>
    <string name="edit_profile_phone_label">Số điện thoại</string>
    <string name="edit_profile_phone_hint">Thêm số điện thoại</string>
    <string name="edit_profile_birthday_label">Ngày sinh</string>
    <string name="edit_profile_gender_label">Giới tính</string>
    <string name="edit_profile_relationship_label">Tình trạng quan hệ</string>
    <string name="edit_profile_current_residence_label">Nơi sống</string>
    <string name="edit_profile_hometown_label">Quê quán</string>
    <string name="edit_profile_description_label">Thêm vài dòng mô tả ngắn về bạn hoặc câu nói mà bạn tâm đắc nhất</string>
    <string name="edit_profile_description_hint">Thêm vài dòng mô tả ngắn về bạn</string>
    <string name="edit_profile_description_warning">Tối đa 100 ký tự</string>
    <string name="edit_profile_website_label">Link đến website của bạn</string>
    <string name="edit_profile_website_hint">Thêm link của bạn</string>
    <string name="edit_profile_website_warning">Lưu ý: Đảm bảo không có ký tự bất thường nào!</string>
    <string name="edit_profile_company_label">Công ty</string>
    <string name="edit_profile_company_hint">Thêm tên công ty</string>
    <string name="edit_profile_position_label">Chức danh</string>
    <string name="edit_profile_position_hint">Thêm chức danh trong công ty</string>
    <string name="edit_profile_school_label">Trường học</string>
    <string name="edit_profile_school_hint">Thêm tên trường học</string>
    <string name="edit_profile_specialized_label">Chuyên ngành</string>
    <string name="edit_profile_specialized_hint">Thêm thêm chuyên ngành học</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_menu_feed">Feed</string>
    <string name="title_menu_group">Group</string>
    <string name="title_menu_chat">Chat</string>
    <string name="title_menu_notification">Notification</string>
    <string name="title_menu_user_profile">Profile</string>
    <string name="what_on_your_mind">Bạn đang nghĩ gì?</string>
    <string name="story">Tin</string>
    <string name="add_new_story">Thêm tin mới</string>
    <string name="read_more">…Xem thêm</string>
    <string name="comment">Bình luận</string>
    <string name="comment_count">bình luận</string>
    <string name="share">Chia sẻ</string>
    <string name="like">Thích</string>
    <string name="heart">Yêu thích</string>
    <string name="haha">Haha</string>
    <string name="wow">Wow</string>
    <string name="sad">Buồn</string>
    <string name="angry">Phẫn nộ</string>
    <string name="write_comment">Viết bình luận...</string>
    <string name="group">Nhóm</string>
    <string name="my_group">Nhóm của bạn</string>
    <string name="propose">Đề xuất</string>
    <string name="create_group">Tạo nhóm</string>
    <string name="notification">Thông báo</string>
    <string name="profile_follow_count">Người theo dõi</string>
    <string name="profile_post_count">Bài viết</string>
    <string name="profile_react_count">Lượt thích</string>
    <string name="edit_user_profile">Chỉnh sửa thông tin</string>
    <string name="introduce">Giới thiệu</string>
    <string name="phone">Số điện thoại</string>
    <string name="current_residence">Sống tại</string>
    <string name="hometown">Đến từ</string>
    <string name="gender">Giới tính</string>
    <string name="photo">Ảnh</string>
    <string name="friend">Bạn bè</string>
    <string name="view_all_friend">Xem tất cả bạn</string>
    <string name="search">Tìm kiếm</string>
    <string name="conversation">Trò chuyện</string>
    <string name="post_empty">Chưa có bài viết nào</string>
    <string name="reply">Trả lời</string>
    <string name="add_media_to_post">Thêm vào bài viết</string>
    <string name="notice">Chú ý!</string>
    <string name="ok">OK</string>
    <string name="cancel">Hủy</string>
    <string name="photo_downloaded">Đã tải ảnh thành công</string>
    <string name="photo_downloaded_error">Tải ảnh bị lỗi</string>
    <string name="photo_downloading">Đang tải ảnh về máy</string>
    <string name="video">Video</string>
    <string name="video_downloaded">Đã tải video thành công</string>
    <string name="video_downloaded_error">Tải video bị lỗi</string>
    <string name="video_downloading">Đang tải video về máy</string>
    <string name="video_uploading">Đang upload video</string>
    <string name="video_uploading_percent">Đang upload video (%s)</string>
    <string name="permission_request_denied">Nếu bạn từ chối cấp quyền, bạn sẽ không thể sử dụng chức năng này. Hãy cấp quyền trong [Cài đặt] &gt; [Ứng dụng] > [Quyền]</string>
    <string name="album_name_all">Tất cả</string>
    <string name="button_apply">Chọn(%1$d)</string>
    <string name="button_apply_default">Chọn</string>
    <string name="button_back">Quay lại</string>
    <string name="button_ok">OK</string>
    <string name="button_original">Gốc</string>
    <string name="button_preview">Xem trước</string>
    <string name="button_sure">Chọn(%1$d)</string>
    <string name="button_sure_default">Chọn</string>
    <string name="button_sure_select">Chọn(%1$d)</string>
    <string name="button_sure_select_default">Chọn</string>
    <string name="photo_grid_capture">Máy ảnh</string>
    <string name="empty_text">Không có ảnh/video nào</string>
    <string name="error_over_count_default">Bạn đã đạt đến mức tối đa có thể lựa chọn</string>
    <string name="error_over_count">Bạn chỉ có thể chọn tối đa %1$d ảnh</string>
    <string name="error_over_video_count">Bạn chỉ có thể chọn tối đa %1$d video</string>
    <string name="error_under_quality">Dưới chất lượng</string>
    <string name="error_over_quality">Vượt quá chất lượng</string>
    <string name="error_file_type">Kiểu tập tin đã không được hỗ trợ</string>
    <string name="error_type_conflict">Không thể chọn ảnh và video cùng một lúc</string>
    <string name="error_no_video_activity">Không ứng dụng nào hỗ trợ xem trước video</string>
    <string name="error_over_original_size">Không thể chọn những ảnh lớn hơn %1$d MB</string>
    <string name="error_over_original_count">%1$d hình ảnh trên %2$d MB. Ảnh gốc sẽ không được chọn</string>
    <string name="error_size_gif_image">Kích cỡ ảnh gif ít nhất %1$dpx và dung lượng không quá %2$sMb</string>
    <string name="error_size_image">Kích cỡ ảnh phải ít nhất %1$dpx và dung lượng không quá %2$sMb</string>
    <string name="error_size_video">Kích cỡ video phải ít nhất %1$dpx và dung lượng không quá %2$sMb</string>
    <string name="drag_to_position">Kéo để đặt vị trí</string>
    <string name="create_group_label_name">Tên nhóm</string>
    <string name="create_group_hint_name">Nhập tên nhóm</string>
    <string name="create_group_label_introduction">Giới thiệu</string>
    <string name="create_group_hint_introduction">Mô tả về nhóm của bạn ...</string>
    <string name="fail_to_crop">Có lỗi xảy ra! Cắt ảnh thất bại</string>
    <string name="loading">Đang xử lý</string>
    <string name="cover">Ảnh bìa</string>
    <string name="view_photo">Xem ảnh</string>
    <string name="take_new_photo">Chụp ảnh mới</string>
    <string name="change_photo">Thay ảnh</string>
    <string name="error_load_media">Đã có lỗi xảy ra, vui lòng thử lại sau</string>
    <string name="error_profile_page">Không tải được trang cá nhân</string>
    <string name="error_profile_page_des">Tài khoản này đã bị chặn hoặc bị vô hiệu hóa</string>
    <string name="refresh">Tải lại</string>
    <string name="menu_action_copy_content">Sao chép nội dung</string>
    <string name="report_comment">Báo cáo bình luận này</string>
    <string name="delete_comment">Xóa bình luận</string>
    <string name="edit_comment">Chỉnh sửa</string>
    <string name="logout">Đăng xuất</string>
    <string name="change_type_group">Cài đặt loại nhóm</string>
    <string name="group_type_public_label">Nhóm công khai</string>
    <string name="group_type_private_label">Nhóm riêng tư</string>
    <string name="account_locked">Tài khoản của bạn tạm thời bị khóa</string>
    <string name="locked_description">Tài khoản của bạn đã bị vô hiệu hóa vì những hành vi không chuẩn mực. Điều này trái với tiêu chuẩn cộng đồng của Social Network.</string>
    <string name="locked_report">Nếu bạn cho rằng chúng tôi đã nhầm lẫn, hãy cho chúng tôi biết.</string>
</resources>