<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_drag_drop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dialog_header_drag_drop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_bottom_sheet_white_round_right_left"
        app:layout_constraintTop_toBottomOf="@+id/iv_drag_drop">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/f_roboto_bold"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/change_type_group"
            android:textColor="@color/color_text_primary"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_confirm"
            style="@style/ClickableView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/f_roboto_medium"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/toolbar_text_right_edit_confirm"
            android:textColor="@color/color_text_highlight"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title" />

        <RadioGroup
            android:id="@+id/rg_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingTop="12dp"
            android:paddingEnd="6dp"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_type_group_public"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/group_type_public_label"
                android:textColor="@color/color_text_primary"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_type_group_private"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/group_type_private_label"
                android:textColor="@color/color_text_primary"
                android:textSize="16sp" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>