<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_no_data">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/load_profile_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/f_roboto_medium"
        android:gravity="center"
        android:text="@string/error_profile_page"
        android:textColor="@color/color_text_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/load_profile_error_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/f_roboto_regular"
        android:gravity="center"
        android:text="@string/error_profile_page_des"
        android:textColor="@color/color_text_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_profile_error_text" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_baseline_error_24"
        android:tint="@color/color_text_secondary"
        app:layout_constraintBottom_toTopOf="@+id/load_profile_error_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_button_round_blue_8"
        android:fontFamily="@font/f_roboto_medium"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/refresh"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_profile_error_des" />

</androidx.constraintlayout.widget.ConstraintLayout>