<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.authentication.login.LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/activity_content_start_margin"
            android:paddingEnd="@dimen/activity_content_end_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_authentication_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_content_top_margin"
                android:fontFamily="@font/f_roboto_bold"
                android:gravity="center"
                android:text="@string/text_logo"
                android:textColor="@color/color_text_highlight"
                android:textSize="@dimen/authentication_text_logo_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_authentication_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/f_roboto_medium"
                android:gravity="center"
                android:text="@string/authentication_login"
                android:textColor="@color/color_text_highlight"
                android:textSize="@dimen/authentication_text_description_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_authentication_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_content_top_margin"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_authentication_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/BackgroundEditTextWithBorder"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:drawableStart="@drawable/ic_baseline_mail_outline_24"
                    android:drawablePadding="@dimen/drawable_edit_text_horizontal"
                    android:hint="@string/authentication_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/edit_text_padding_horizontal"
                    android:paddingVertical="@dimen/edit_text_padding_vertical"
                    android:singleLine="true"
                    android:textSize="@dimen/edit_text_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/authentication_edit_text_top_margin"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/l_email"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/color_drawable_edit_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/BackgroundEditTextWithBorder"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:drawableStart="@drawable/ic_lock_24"
                    android:drawablePadding="@dimen/drawable_edit_text_horizontal"
                    android:hint="@string/authentication_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/edit_text_padding_horizontal"
                    android:paddingVertical="@dimen/edit_text_padding_vertical"
                    android:singleLine="true"
                    android:textSize="@dimen/edit_text_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/authentication_text_view_top_margin"
                android:fontFamily="@font/f_roboto_bold"
                android:text="@string/authentication_forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/authentication_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/l_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/BackgroundEditTextWithBorder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_content_top_margin"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/authentication_login"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/authentication_edit_text_top_margin"
                android:fontFamily="@font/f_roboto_bold"
                android:text="@string/authentication_register"
                android:textColor="@color/black"
                android:textSize="@dimen/authentication_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/drawable_edit_text_vertical"
                android:fontFamily="@font/f_roboto_regular"
                android:text="@string/authentication_new_account"
                android:textColor="@color/black"
                android:textSize="@dimen/authentication_text_size"
                app:layout_constraintBottom_toBottomOf="@id/tv_register"
                app:layout_constraintEnd_toStartOf="@id/tv_register"
                app:layout_constraintTop_toTopOf="@+id/tv_register" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_content_bottom_margin"
                app:layout_constraintTop_toBottomOf="@id/tv_register" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>