<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.locked.LockedActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/l_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_text_highlight"
        android:padding="@dimen/feed_header_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_logout"
            style="@style/ClickableView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/f_roboto_medium"
            android:padding="6dp"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@+id/l_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_locked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/f_roboto_medium"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/account_locked"
                android:textColor="@color/color_text_primary"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/v_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_line"
                app:layout_constraintTop_toBottomOf="@+id/tv_locked" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_locked_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:text="@string/locked_description"
                android:textColor="@color/color_text_primary"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/v_divider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_locked_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="12dp"
                android:text="@string/locked_report"
                android:textColor="@color/color_text_primary"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_locked_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>